# hello-rocket

./: Cargo.toml  README.md  Rocket.toml
src/: main.rs  schema.rs
src/controller/: system.rs
src/models/: model.rs
